--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,200,600,800)
 
 body, ul, li
-  margin: 0
+  margin:  0
   padding: 0
   font: 200 1em/1.5em "Exo 2", "Helvetica Neue", Helvetica, Arial, sans-serif
 
@@ -31,8 +31,9 @@ header
 main
   margin: 20px 0 0
   padding-bottom: 20px
-
-
+  img
+    margin: 20px
+    
 footer
   background: #333333
   padding: 20px 0
@@ -46,3 +47,6 @@ footer
       width: 30px
       border-radius: 50%
       overflow: hidden
+
+
+  
